--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.3
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -33,8 +34,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   test:
-  mockito: ^5.0.15
+  mockito: ^5.0.14
   faker: ^2.0.0
+  build_runner:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
